  - To build javadoc, run make javadoc in the main build directory.
  - The configure flag --disable-java can be used to disable the check for
    java and build of the Java interface.
  - DLLPATH and DLLNAME have been removed from the Ipopt class and
    constructors that works without arguments and with only one argument
    (specifying the Ipopt library namestem) have been added.
- Integrated sIpopt into the main Ipopt build, that is, it is now build
  together with Ipopt, but installed as separate library and executable.
  Use --disable-sipopt to disable building sIpopt.
- IPOPT_THREAD_LOCAL now uses C++11's thread_local keyword if C++11 is available.
- When using a GCC-compatible compiler, Ipopt and sIpopt interface functions
  are now declared with visibility(default)-attribute, thus building Ipopt
  with -fvisibility=hidden still produces a usable library.
- When using a MSVC-compatible compiler, Ipopt and sIpopt interface functions
  are now declared with dllimport-attribute, so that an Ipopt C++ DLL can
  be used.
- Under Windows/Msys2, DLLs are now build by default.
- Cygwin and MSys1 are not supported.
- pkg-config is now mandatory to use dependencies like ASL or HSL.
  On Windows, make sure to use a pkg-config version that produces
  Unix-style paths.
- Script "compile" is now used to wrap around calls of cl/icl/ifort and
  translate GCC-style compiler flags to MSVC style.
- "Addlibs" files have been removed, pkg-config should be used instead.
- Header files are now installed in $prefix/include/coin-or instead of
  $prefix/include/coin
- The default for --prefix is no longer the build directory, but the
  autotools-default, probably /usr/local.
- The check for a Fortran compiler can be disabled via --disable-f77 and
  Ipopt can easier be build without a Fortran compiler.
- Lapack is no longer optional, but required. The separate check for Blas
  and the --with-blas flags have been removed.
- --enable-debug does not imply --disable-shared anymore.